<resources>
    <string name="app_name">MRU</string>
    <string name="serviceURL">http://139.59.57.136:8080/backend-service-management/api/</string>
    <string name="category">Category</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="sub_category">Sub Category</string>
    <string name="sub_type">Sub Type</string>
    <string name="submit_request">Submit Request</string>
    <string name="type">Type</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="postal_address">Postal Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="raise_service_request">Raise Request</string>
    <string name="services_offered_desc">One stop solution for all Home and Kitchen appliances, electronics and consumer durable goods.</string>
    <string name="services_offered">Products</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">9975727088</string>
    <string name="about_us_title">About Us</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="raise_request_title">Raise\nRequest</string>
    <string name="services_offered_title">Service Offered</string>
    <string name="shared_preference">MRU_LocalData</string>
    <string name="json_categories">result</string>
    <string name="allCategoriesAPI">product/allCategories</string>
    <string name="allProductTypes">product/allProductTypes</string>
    <string name="allSubCategories">product/allSubCategories</string>


    <!-- Strings related to login -->
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_temp">Sign in</string>
    <string name="register_here">Not Registered? Register here</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_items">No Requests to display</string>

</resources>
