<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.activities.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstNameTextInputLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/SignUp_FirstName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_above="@+id/SignUp_MobileNo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/edit_text_shape_with_state"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/firstNameTextInputLayout">

        <EditText
            android:id="@+id/SignUp_LastName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/edit_text_shape_with_state"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/mobileTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameTextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/SignUp_MobileNo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_above="@+id/SignUp_Email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:maxLength="@integer/mobileNoLength"
            android:background="@drawable/edit_text_shape_with_state"
            android:paddingLeft="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobileTextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/SignUp_Email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/firstNameTextInputLayout"
            android:background="@drawable/edit_text_shape_with_state"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/SignUp_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/passwordTextLayout"
            android:background="@drawable/edit_text_shape_with_state"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/SignUp_confPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/confPasswordTextInputLayout"
            android:background="@drawable/edit_text_shape_with_state"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressTextInputLayout"
        android:layout_below="@+id/confPasswordTextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/SignUp_Address"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_above="@+id/SignUp_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_text_shape_with_state"
            android:ems="10"
            android:hint="@string/postal_address"
            android:inputType="textPostalAddress"
            android:maxLength="250"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_below="@+id/addressTextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp">

        <Button
            android:id="@+id/SignUp_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_bg_color_with_state"
            android:onClick="signUpSubmit"
            android:text="@string/sign_up" />
    </LinearLayout>

</RelativeLayout>
